# SZ

./: .gitignore  CMakeLists.txt
docker/: Dockerfile-Fedora  Dockerfile-Ubuntu
example/: CMakeLists.txt  sz_gpu.cc
sz/: CMakeLists.txt
sz/include/: sz_cuda.h  sz_opencl.h  sz_opencl_config.h.in  sz_opencl_host_utils.h  sz_opencl_kernels.h  sz_opencl_private.h
sz/src/: TightDataPointStorageD.c  TightDataPointStorageF.c  TightDataPointStorageI.c  sz_cuda.cu  sz_float.c  sz_opencl.cc  sz_opencl.cl  sz_opencl_host_utils.cc
test/cunit-test/: test_OpenCL.cc
